modify aci issues

--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
@@ -55,7 +55,10 @@
    > **注意**
    >
    >* 如果设置了 Primary Zone，则 Primary Zone 所在的 Region 必须至少有两个 Zone，并且至少有两个全能型（F）副本（一个 Zone 一个副本）。
-   >* 有关 Primary Zone 的详细信息，请参见 [Primary Zone](../../../../4.system-architecture/5.distributed-database-objects/3.data-partitions-and-replicas/4.data-balancing/2.leader-equalization/2.primary-zone.md)。
+
+   <!-->
+   >* 有关 Primary Zone 的详细信息，请参见 [Primary Zone](../../../../7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/)。
+   <-->
 
 6. （可选）在 **创建集群** 页面，参数设置。
 
