--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
@@ -10,7 +10,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 * OBServer 服务器已完成相关配置。有关配置 OBServer 服务器详细信息，请参 [服务器配置](../../2.preparations-before-deployment/2.server-configuration.md)。
 
-* 部署环境已完成相关配置。有关部署环境的详细信息，请参见 [部署环境配置](../1.configure-a-deployment-environment-command-line/2.configure-a-deployment-environment-by-using-the-oat-cli.md)。
+* 部署环境已完成相关配置。有关部署环境的详细信息，请参见 [部署环境配置](../../4.command-line-deployment/1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md)。
 
 ## 操作步骤
 
