--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
@@ -6,7 +6,7 @@
 
 ### 语法 1
 
-通过 `INSERT INTO ... SELECT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [INSERT（MySQL 模式）](../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/37.INSERT.md) 和 [INSERT（Oracle 模式）](../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/2.INSERT-1.md)。
+通过 `INSERT INTO ... SELECT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [INSERT（MySQL 模式）](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) 和 [INSERT（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
 
 ```sql
 INSERT INTO target_table_name[(target_col_name[, target_col_name] ...)]
@@ -27,7 +27,7 @@ FROM source_table_name
 
 ### 语法 2
 
-通过 `MERGE INTO ... INSERT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [MERGE](../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/3.MERGE.md)。
+通过 `MERGE INTO ... INSERT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [MERGE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md)。
 
 >**功能适用性**
 >
