--- a/zh-CN/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
@@ -8,7 +8,7 @@
 
 导入到 OceanBase 数据库 SQL 文件中的 SQL 语法必须符合 OceanBase 数据库的要求。
 
-有关 OceanBase 数据库 SQL 语法的详细信息，请参见 [SQL 语法（MySQL 模式）](../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/1.general-syntax.md) 和 [SQL 语法（Oracle 模式）](../7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/1.SQL/1.sql-introduction/1.sql-overview.md)。
+有关 OceanBase 数据库 SQL 语法的详细信息，请参见 [SQL 语法（MySQL 模式）](../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/1.general-syntax-of-mysql-mode.md) 和 [SQL 语法（Oracle 模式）](../7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/1.SQL/1.sql-introduction/1.sql-overview.md)。
 
 示例中使用的 SQL 文件信息如下：
 
