--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
@@ -20,11 +20,11 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
   * 配置项 `connection_control_min_connection_delay` 用于指定超过连续错误登录次数阈值之后锁定时长的最小值，取值范围为 \[1000，2147483647\]，默认值为 `1000`，单位为毫秒。
 
-    配置项 `connection_control_min_connection_delay` 的更多说明信息，请参见 [connection_control_min_connection_delay](../../../../../7.reference/14.system-reference/1.system-configuration-items/4.tenant-level-configuration-items-1/6.connection_control_min_connection_delay-1-2.md)。
+    配置项 `connection_control_min_connection_delay` 的更多说明信息，请参见 [connection_control_min_connection_delay](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/6.connection_control_min_connection_delay.md)。
 
   * 配置项 `connection_control_max_connection_delay` 用于指定超过连续错误登录次数阈值之后锁定时长的最大值，取值范围为 \[1000，2147483647\]，默认值为 `2147483647`，单位为毫秒。
 
-    配置项 `connection_control_max_connection_delay` 的更多说明信息，请参见 [connection_control_max_connection_delay](../../../../../7.reference/14.system-reference/1.system-configuration-items/4.tenant-level-configuration-items-1/7.connection_control_max_connection_delay-1-2.md)。
+    配置项 `connection_control_max_connection_delay` 的更多说明信息，请参见 [connection_control_max_connection_delay](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/7.connection_control_max_connection_delay.md)。
 
 ## 配置示例
 
@@ -46,7 +46,7 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
    obclient> ALTER SYSTEM SET connection_control_max_connection_delay=360000;
    ```
 
-   配置项相关的详细设置及说明请参见 [修改集群参数](../../../1.manage-clusters/3.manage-cluster-parameters/3.modify-cluster-parameters-1.md)。
+   配置项相关的详细设置及说明请参见 [修改集群参数](../../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md)。
 3. 创建用户并授权。
 
    ```sql
@@ -81,7 +81,7 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
    >**注意**
    >
-   >解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 `ALTER USER` 权限。查看用户权限和授权的相关操作请参见 [查看用户权限](../2.oracle-3/4.view-user-permissions.md) 和 [修改用户权限](../2.oracle-3/5.modify-user-permissions-1.md)。
+   >解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 `ALTER USER` 权限。查看用户权限和授权的相关操作请参见 [查看用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md) 和 [修改用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
    ```sql
    obclient> ALTER USER test ACCOUNT UNLOCK;
