--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -67,7 +67,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
      * `DEFAULT` 表示使用 `DEFAULT` Profile 的限制。
 
-   更多 `CREATE PROFILE` 语句的详细信息，请参见 [CREATE PROFILE](../../../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/19.create-profile.md)。
+   更多 `CREATE PROFILE` 语句的详细信息，请参见 [CREATE PROFILE](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/19.create-profile-of-oracle-mode.md)。
 
 2. 应用 Profile 至用户。
 
@@ -84,7 +84,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
      如果在创建用户时未指定 Profile，则默认使用 `DEFAULT` Profile。`DEFAULT` Profile 的配置可以通过系统视图 `DBA_PROFILES` 查看。
 
-     更多 `CREATE USER` 语句的详细信息，请参见 [CREATE USER](../../../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/27.create-user-1.md) **。**
+     更多 `CREATE USER` 语句的详细信息，请参见 [CREATE USER](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md) 。
 
    * 如果用户已创建，则可以通过修改用户的 Profile 文件将已创建的 Profile 文件应用至用户。
 
@@ -94,7 +94,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
      obclient> ALTER USER user_name PROFILE {"profile_name" | default};
      ```
 
-     更多 `ALTER USER` 语句的详细信息，请参见 [ALTER USER](../../../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/12.alter-user-1.md) 。
+     更多 `ALTER USER` 语句的详细信息，请参见 [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md) 。
 
 ## 操作示例
 
