--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/5.permission-check-of-oracle.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/5.permission-check-of-oracle.md
@@ -26,7 +26,7 @@
      1 row in set
      ```
 
-     更多 `DBA_SYS_PRIVS` 视图的字段及说明请参见 [DBA_SYS_PRIVS](../../../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/104.DBA_SYS_PRIVS-1.md)。
+     更多 `DBA_SYS_PRIVS` 视图的字段及说明请参见 [DBA_SYS_PRIVS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/104.dba_sys_privs-of-oracle-mode.md)。
 
    * 查看当前用户被授予的系统权限
 
@@ -43,7 +43,7 @@
      2 row in set
      ```
 
-     更多 `USER_SYS_PRIVS` 视图的字段及说明请参见 [USER_SYS_PRIVS](../../../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/172.USER_SYS_PRIVS-1.md)。
+     更多 `USER_SYS_PRIVS` 视图的字段及说明请参见 [USER_SYS_PRIVS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/172.user_sys_privs-of-oracle-mode.md)。
 
    * 查看某个用户被授予的对象权限
 
@@ -60,7 +60,7 @@
      2 rows in set
      ```
 
-     更多 `DBA_TAB_PRIVS` 视图的字段及说明请参见 [DBA_TAB_PRIVS](../../../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/111.DBA_TAB_PRIVS-1.md)。
+     更多 `DBA_TAB_PRIVS` 视图的字段及说明请参见 [DBA_TAB_PRIVS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/111.dba_tab_privs-of-oracle-mode.md)。
 
    * 查看当前用户被授予的对象权限
 
@@ -76,4 +76,4 @@
      1 row in set
      ```
 
-     更多 `USER_TAB_PRIVS` 视图的字段及说明请参见 [USER_TAB_PRIVS](../../../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/182.USER_TAB_PRIVS-1.md)。
+     更多 `USER_TAB_PRIVS` 视图的字段及说明请参见 [USER_TAB_PRIVS](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/182.user_tab_privs-of-oracle-mode.md)。
