--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/3.log-archive/8.view-parameters-of-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/3.log-archive/8.view-parameters-of-log-archive.md
@@ -49,7 +49,7 @@
 
     系统为该路径分配的 `dest_id` 是 `1`，且该路径的归档也已经打开。
 
-更多 `CDB_OB_ARCHIVE_DEST` 视图的说明，请参见 [CDB_OB_ARCHIVE_DEST](../../../../5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/131.oceanbase-cdb_ob_archive_dest-of-mysql-mode.md)。
+更多 `CDB_OB_ARCHIVE_DEST` 视图的说明，请参见 [CDB_OB_ARCHIVE_DEST](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/131.oceanbase-cdb_ob_archive_dest-of-mysql-mode.md)。
 
 ## 用户租户查看本租户的归档参数
 
