--- a/zh-CN/4.deploy-oceanbase/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
+++ b/zh-CN/4.deploy-oceanbase/5.deploy-oceanbase-database-community-edition/1.deployment-overview.md
@@ -8,9 +8,9 @@ OceanBase 数据库社区版支持多种部署方式：
 
 ## 快速部署
 
-* 对于非原生支持的操作系统（比如 MAC 和 Window），建议使用 docker 镜像的方式进行部署；具体操作参见 [快速体验 OceanBase](../2.quick-start/0.Quickly-experience-OceanBase.md)。
+* 对于非原生支持的操作系统（比如 MAC 和 Window），建议使用 docker 镜像的方式进行部署；具体操作参见 [快速体验 OceanBase](../../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md)。
 
-* 对于原生支持的操作系统（Linux 系列，具体见支持的操作系统列表），建议使用 OBD 进行一键部署；具体操作参见 [使用 obd demo 部署 OceanBase 数据库](../2.quick-start/0.Quickly-experience-OceanBase.md)。
+* 对于原生支持的操作系统（Linux 系列，具体见支持的操作系统列表），建议使用 OBD 进行一键部署；具体操作参见 [使用 obd demo 部署 OceanBase 数据库](../../2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md)。
 
 ## 标准部署
 
