--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/4.indirect-authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/4.indirect-authority-of-oracle-mode.md
@@ -15,7 +15,7 @@
 
 * 当授予系统权限或角色时，当前用户必须拥有被授予的权限或角色，并且拥有 `GRANT OPTION` 权限，或者拥有 `GRANT ANY PRIVILEGE` 权限或 `GRANT ANY ROLE` 权限，才能授予成功。
 
-查看当前拥有权限的操作请参见 [查看用户权限](../2.oracle-3/4.view-user-permissions.md)。如果您没有所需的权限，请联系管理员为您添加。查看当前拥有角色的操作请参见 [查看角色](9.manage-roles/6.view-roles.md)。
+查看当前拥有权限的操作请参见 [查看用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果您没有所需的权限，请联系管理员为您添加。查看当前拥有角色的操作请参见 [查看角色](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
 
 ### 注意事项
 
@@ -43,7 +43,7 @@
   obclient> GRANT SELECT, UPDATE ON emp_view TO test;
   ```
 
-`GRANT` 语句的更多信息，请参见 [GRANT](../../../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/3.DCL/7.GRANT-1.md)。
+`GRANT` 语句的更多信息，请参见 [GRANT](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/7.grant-of-oracle-mode.md)。
 
 ## 通过角色间接获得的权限
 
@@ -51,7 +51,7 @@
 
 为角色授予系统权限、对象权限或角色时，当前用户必须拥有被授予的权限或角色，并且拥有 `GRANT OPTION` 权限，或者拥有 `GRANT ANY OBJECT PRIVILEGE` 权限、`GRANT ANY PRIVILEGE` 权限或 `GRANT ANY ROLE` 权限，才能授权成功。
 
-查看当前拥有权限的操作请参见 [查看用户权限](../4.view-user-permissions.md)。如果您没有相应的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../5.modify-user-permissions-1.md)。查看当前用户拥有的角色的操作请参见 [查看角色](../9.manage-roles/6.view-roles.md)。
+查看当前拥有权限的操作请参见 [查看用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果您没有相应的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。查看当前用户拥有的角色的操作请参见 [查看角色](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
 
 ### 操作示例
 
@@ -72,6 +72,6 @@ Query OK, 0 rows affected
 obclient> GRANT [privilege_list] TO PUBLIC;
 ```
 
-添加权限后，系统会将该权限添加到租户内的每个用户的权限域中。所有用户都可以立即执行该权限所授权的操作。关于 `PUBLIC` 角色的更多信息，请参见 [角色管理概述](../9.manage-roles/1.role-management-overview-1.md)。
+添加权限后，系统会将该权限添加到租户内的每个用户的权限域中。所有用户都可以立即执行该权限所授权的操作。关于 `PUBLIC` 角色的更多信息，请参见 [角色管理概述](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/1.role-management-overview-of-oracle-mode.md)。
 
-更多 `GRANT` 语句的说明信息，请参见 [GRANT](../../../../../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/3.DCL/7.GRANT-1.md)。
+更多 `GRANT` 语句的说明信息，请参见 [GRANT](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/7.grant-of-oracle-mode.md)。
