--- a/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/2.set-storage-encryption-for-existing-tables-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/5.data-storage-encryption/3.data-storage-encryption-of-oracle-mode/2.set-storage-encryption-for-existing-tables-of-oracle-mode.md
@@ -16,7 +16,7 @@
 
    配置项 `tde_method` 用于设置透明表空间加密的方式，默认为 `none` ，表示关闭透明表空间加密。
 
-   更多配置项 `tde_method` 的说明信息请参见 [tde_method](../../../../7.reference/14.system-reference/1.system-configuration-items/4.tenant-level-configuration-items-1/34.tde_method-1-2-3.md)。
+   更多配置项 `tde_method` 的说明信息请参见 [tde_method](../../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/34.tde_method.md)。
 
    ```sql
    obclient> ALTER SYSTEM SET tde_method='internal';
@@ -120,7 +120,7 @@
 
       2. 手动发起一轮合并。
 
-         手动发起合并的操作请参见 [手动触发合并](../../../6.basic-database-management/5.manage-data-storage/2.merge-management-1/4.manually-trigger-a-merge-1.md)。
+         手动发起合并的操作请参见 [手动触发合并](../../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md)。
 
          >**说明**
          >
@@ -170,4 +170,4 @@
 
     根据查询结果，如果 `BLOCKS_DECRYPTED` 字段的值为 `0`，则表示所有宏块都已完成加密。
 
-    更多视图 `V$OB_ENCRYPTED_TABLES` 的字段及说明信息请参见 [V$OB_ENCRYPTED_TABLES](../../../../7.reference/14.system-reference/5.system-view-for-oracle/3.performance-view-6/77.v-encrypted_tables-4.md)。
+    更多视图 `V$OB_ENCRYPTED_TABLES` 的字段及说明信息请参见 [V$OB_ENCRYPTED_TABLES](../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/77.v-encrypted_tables-of-oracle-mode.md)。
