--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/2.audit-open.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/2.audit-open.md
@@ -39,7 +39,7 @@
    obclient> ALTER SYSTEM SET audit_trail = 'DB,EXTENDED';
    ```
 
-   有关 `audit_trail` 配置项的详细信息，请参见 [audit_trail](../../../7.reference/14.system-reference/1.system-configuration-items/4.tenant-level-configuration-items-1/2.audit_trail-1-2-3.md) 。
+   有关 `audit_trail` 配置项的详细信息，请参见 [audit_trail](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/2.audit_trail.md) 。
 
       > **说明**
       >
