--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/4.view-audit-rules.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/4.view-audit-rules.md
@@ -4,9 +4,9 @@
 
 |                                字典视图                                |                                                                                                                                               功能说明                                                                                                                                                |
 |--------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [ALL_DEF_AUDIT_OPTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/9.ALL_DEF_AUDIT_OPTS-1.md)  | 记录任何新创建对象的默认审计规则。每列的取值如下： *`-/-`：默认不审计* `A/-`: 只在语句执行成功时审计  *`-/A`: 只在语句执行失败时审计* `A/A`: 语句执行无论成功还是失败时都审计   |
-| [DBA_STMT_AUDIT_OPTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/100.DBA_STMT_AUDIT_OPTS-1.md) | 记录语句级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
-| [DBA_OBJ_AUDIT_OPTS](../../../7.reference/14.system-reference/5.system-view-for-oracle/2.dictionary-view-6/85.DBA_OBJ_AUDIT_OPTS-1.md)  | 记录对象级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
+| [ALL_DEF_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/9.all_def_audit_opts-of-oracle-mode.md)  | 记录任何新创建对象的默认审计规则。每列的取值如下： *`-/-`：默认不审计* `A/-`: 只在语句执行成功时审计  *`-/A`: 只在语句执行失败时审计* `A/A`: 语句执行无论成功还是失败时都审计   |
+| [DBA_STMT_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/100.dba_stmt_audit_opts-of-oracle-mode.md) | 记录语句级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
+| [DBA_OBJ_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/85.dba_obj_audit_opts-of-oracle-mode.md)  | 记录对象级别审计的详细配置。                                                                                                                                                                                                                                                                                    |
 
 查看 `ALL_DEF_AUDIT_OPTS` 中的审计规则。示例如下：
 
