--- a/zh-CN/6.manage/1.clutser-management/1.cluster-management-overview.md
+++ b/zh-CN/6.manage/1.clutser-management/1.cluster-management-overview.md
@@ -1,13 +1,15 @@
 # 集群介绍
 
-本节主要介绍 OceanBase 集群相关的基本概念及架构。
+本节主要介绍 OceanBase 集群相关的基本概念及物理架构。
+
+OceanBase 数据库是一款分布式数据库，由多个物理上分散的数据库单元组成，通过计算机网络将这些数据库单元组成的逻辑上的统一整体，称之为 OceanBase 集群。
+
+一个 OceanBase 集群由若干个 Zone 组成，Zone 是可用区（Availability Zone）的简写。Zone 本身是一个逻辑概念，是对节点进行管理的容器，一般是具有相似容灾属性的一组节点的组合。从物理层面来讲，一个 Zone 通常等价于一个机房、一个数据中心或一个 IDC。
 
 OceanBase 数据库是单进程软件，进程名为 observer。通常一台物理或者虚拟服务器运行一个 observer 进程，由 IP 和端口作为唯一标识，我们称之为节点，也可以用 OBServer 表示。observer 进程作为 OceanBase 数据库最核心的组件，负责几乎所有数据库内核功能，包括 SQL 引擎、存储引擎和事务引擎。分布式的功能也同样在这个进程中，包括 RPC 通信、分区管理和负载均衡等。
 
-OceanBase 数据库是一款分布式数据库，物理组成上由多个机器组成，这批机器组成的整体，称之为 OceanBase 集群。一个 OceanBase 集群由若干个 Zone 组成。Zone 是可用区（Availability Zone）的简写。Zone 本身是一个逻辑概念，是对节点进行管理的容器，一般是具有相似容灾属性的一组节点的组合。从物理层面来讲，一个 Zone 通常等价于一个机房、一个数据中心或一个 IDC。为交付高级别的数据安全性和服务可用性能力，OceanBase 集群的典型部署架构为同城三机房部署：集群分布于同城 3 个机房中，同一份数据的三个副本分别分布在 3 个机房中（即 3 个 Zone 中）。
-
-OceanBase 数据库支持数据跨地域（Region）部署，且不同 Region 的距离通常较远，从而满足地域级容灾的需求。一个 Region 可以包含一个或者多个 Zone。
-
-例如，某 OceanBase 集群部署在某城市（某一 Region）且分布在三个 IDC 机房中，每个 IDC 机房中又有 3 台服务器，故每个 IDC 机房的中的这 3 台服务器组合成一个 Zone。其部署架构如下图所示。
-
+为交付高级别的数据安全性和服务可用性能力，OceanBase 集群的典型部署架构为同城三中心部署：集群分布于同城 3 个机房中，同一份数据的三个副本分别分布在 3 个机房中，其部署架构如下图所示：
 ![集群架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/cluster-architeture.png)
+上图的 OceanBase 集群部署在一个城市（对应为一个 Region），且分布在三个 IDC 机房（对应为三个 Zone），每个 IDC 机房中有 3 台服务器（对应为三个 节点）。
+
+OceanBase 数据库支持数据跨地域（Region）部署，且不同 Region 的距离通常较远，从而满足地域级容灾的需求。一个 Region 可以包含一个或者多个 Zone。例如后面章节介绍的两地三中心部署和三地五中心部署。
