update comment of zishao

--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
@@ -2,7 +2,7 @@
 
 在创建租户前，需要先确定租户的资源规格和资源使用范围。本文介绍如何创建资源规格。
 
-资源规格是指资源单元的规格，资源单元是资源调度使用的基本单位，在不同场景中，会用到不同大小的资源单元，就需要通过 `CREATE RESOURCE UNIT` 来创建合适的资源规格，从而可以调度使用相应大小的资源单元。
+资源规格是指资源单元的规格，资源单元是资源调度使用的基本单位。在不同场景中，会用到不同大小的资源单元，就需要通过 `CREATE RESOURCE UNIT` 来创建合适的资源规格，从而可以调度使用相应大小的资源单元。
 
 ## 操作步骤
 
@@ -74,7 +74,7 @@
 
 ## 更多信息
 
-创建资源规格后，可以在创建资源池时指定资源规格，从而使用相应大小的资源单元，并最终分配给相应的租户，详细操作，请参见：
+创建资源规格后，可以在创建资源池时指定资源规格，从而使用相应大小的资源单元，并最终分配给相应的租户。详细操作，请参见：
 
 * [创建资源池](2.create-resource-pool.md)
 
