--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/10.modify-tenant-properties.md
@@ -54,7 +54,7 @@
     参数说明：
 
     * PRIMARY_ZONE：用于指定租户的 Primary Zone。
-    * locality：描述副本在 Zone 间的分布情况，如：`F@zone1,F@zone2,F@zone3` 表示 `zone1`、`zone2` 和 `zone3` 为全功能副本。该参数增加 zone 配置时需要租户资源池的 ZONE_LIST 包含该 zone。
+    * locality：描述副本在 Zone 间的分布情况，如：`F@zone1,F@zone2,F@zone3` 表示 `zone1`、`zone2` 和 `zone3` 为全功能副本。该参数增加 Zone 配置时需要租户资源池的 ZONE_LIST 包含该 Zone。
 
     `ALTER TENANT` 语句的详细说明，请参见 [ALTER TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
 
