--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -2,11 +2,9 @@
 
 本文介绍如何创建租户。
 
-## 前提条件
+## 背景信息
 
-创建租户需要有可用的资源池，创建资源池需要有相应的资源规格，所以创建租户的一般顺序为：创建资源规格 > 创建资源池 > 创建租户。创建租户之前，请确保有可用的资源池。
-
-有关创建资源规格和资源池的详细操作，参见 [创建资源规格](1.create-resource-specifications.md) 和 [创建资源池](2.create-resource-pool.md)。
+创建租户需要有可用的资源池，创建资源池需要有相应的资源规格，所以创建租户的一般顺序为：创建资源规格 > 创建资源池 > 创建租户。创建租户之前，请确保有可用的资源池。有关创建资源规格和资源池的详细操作，参见 [创建资源规格](1.create-resource-specifications.md) 和 [创建资源池](2.create-resource-pool.md)。
 
 <main id="notice" type='notice'>
  <h4>注意</h4>
@@ -47,7 +45,7 @@
 
 4. 通过 `CREATE TENANT` 语句，创建租户。
 
-   * 创建了一个名为 `mq_t1` 的租户（默认为 MySQL 模式租户），副本数为 2，资源池指定为 `mq_pool_01`，primary zone 为 zone1，允许所有 IP 连接数据库。
+   * 创建一个名为 `mq_t1` 的租户（默认为 MySQL 模式租户），副本数为 2，资源池指定为 `mq_pool_01`，Primary Zone 为 zone1，允许所有 IP 连接数据库。
 
         ```sql
         obclient [oceanbase]> CREATE TENANT IF NOT EXISTS mq_t1 
@@ -119,13 +117,13 @@
 
     * Oracle 兼容模式
 
-      3. 登录 `moracle_tenant1` 租户的 sys 用户。
+      1. 登录 `moracle_tenant1` 租户的 sys 用户。
 
           ```sql
           $obclient -h172.30.xx.xx -P2883 -usys@oracle_tenant1#cluster  -A
           ```
 
-      4. 执行以下语句修改 root 用户的密码。
+      2. 执行以下语句修改 root 用户的密码。
 
           ```sql
           obclient [SYS]> ALTER USER sys IDENTIFIED BY '****';
