--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.log-in-a-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.log-in-a-tenant.md
@@ -1,6 +1,6 @@
 # 登录租户
 
-创建租户后可以登录租户创建各种数据库对象（Database、Table、用户等）。
+创建租户后，符合白名单要求的 IP 可以登录租户创建各种数据库对象（Database、Table、用户等）。
 
 ## 设置白名单
 
@@ -59,7 +59,7 @@
     6 rows in set
     ```
 
-4. 查询 oracle001 租户在哪些节点上有 unit。
+4. 以的 `TENANT_ID = 1010` 为条件，查询 oracle001 租户在哪些节点上有 unit。
 
     ```sql
     obclient [oceanbase]> SELECT UNIT_ID,STATUS,ZONE,SVR_IP FROM dba_ob_units WHERE TENANT_ID = 1010;
@@ -85,11 +85,6 @@
 
    * 通过 obclient 客户端登录 Oracle 兼容模式的租户。
 
-      <main id="notice" type='explain'>
-       <h4>说明</h4>
-       <p>obclient 是 OceanBase 数据库的登录客户端，可以支持连接 MySQL 兼容模式租户和 Oracle 兼容模式租户。</p>
-      </main>
-
       ```bash
       $obclient -P2881 -h127.0.0.1 -usys@oracle001 -p**** -A
       Welcome to the OceanBase.  Commands end with ; or \g.
@@ -102,6 +97,11 @@
 
       obclient [SYS]>
       ```
+
+      <main id="notice" type='explain'>
+       <h4>说明</h4>
+       <p>obclient 是 OceanBase 数据库的登录客户端，可以支持连接 MySQL 兼容模式租户和 Oracle 兼容模式租户。</p>
+      </main>
 
    * 通过 MySQL 客户端登录 MySQL 兼容模式的租户。
 
