--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -8,7 +8,7 @@
 
 <main id="notice" type='explain'>
  <h4>说明</h4>
- <p><ul><li>当前版本暂不支持对租户资源池进行调小操作。</li></ul></p>
+ <p>当前版本暂不支持对租户资源池进行调小操作。</p>
 </main>
 
 ## 操作步骤
