--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -10,7 +10,7 @@
 
 * 当租户只有一个资源池时，不支持直接移除。
 
-  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，请参见 [新建资源池](2.create-resource-pool.md)
+  * 先新建资源池，分配给该租户，再通过修改资源池配置释放需要删除的资源池。新建资源池操作，请参见 [新建资源池](2.create-resource-pool.md)。
   * 如果租户已不再使用，也可以先删除租户后，再删除资源池。详细操作，请参见 [删除租户](12.delete-tenant.md)。
 
 ## 操作步骤
