--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -14,7 +14,7 @@
 
 ## 修改 Session 级别的系统变量
 
-1. 登使用 root 用户登录到数据库的用户租户。
+1. 使用 root 用户登录到数据库的用户租户。
 
    本示例中使用 `mq_t1` 租户。
 
@@ -98,7 +98,7 @@
     1 row in set
     ```
 
-## INT 类型变量修改
+## 修改 INT 类型变量
 
 在 `SHOW VARIABLES` 命令中显示 ON/OFF 或者 True/False 的变量，可以通过如下任意方法设置变量值：
 
@@ -112,5 +112,5 @@ SET GLOBAL foreign_key_checks = 1;
 
 <main id="notice" type='explain'>
  <h4>说明</h4>
- <p>以上两种方式的 Session 级别变量的设置是等效的。</p>
+ <p>通过 ON/OFF 或 1/0 进行 INT 类型变量的设置是等效的。</p>
 </main>
