--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
@@ -38,7 +38,7 @@ OceanBase 集群由若干个 Zone 组成。从物理层面来讲，一个Zone通
 
      * `ACTIVE` 表示该 Zone 为可用状态。
 
-     * `INACTIVE` 表示该 Zone 为不可用状态。
+     * `INACTIVE` 表示该 Zone 为不可用状态。当一个 Zone 里面所有节点不可用时，该 Zone 被置为 `INACTIVE`，通常发生于物理机房故障、网络分区等情况下。
 
    * `IDC`：Zone 所在的机房名。
 
