add some details

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -1,6 +1,14 @@
 # 隔离 Zone
 
-当需要进行机房级容灾或需要进行机房级运维变更时，您可以隔离 Zone。隔离后，新的读写请求不会路由到该故障 Zone 内的节点上。
+为了实现 OceanBase 数据库的高级别容灾功能，我们引入了 Zone 的概念。Zone 是一个逻辑概念，一般是具有相似容灾属性的一组节点的组合。从物理层面来讲，一个 Zone 通常是一个独立的物理部署单元，可以是一个数据中心（IDC）或者云上的一个AZ（可用区），也可以是一个单独的机架（Rack）。通过将 OceanBase 集群部署于多个 Zone （通常至少3个 Zone ） ，实现单个 Zone 故障时的故障隔离及快速恢复。
+
+当需要进行 Zone 级容灾或者 Zone 级运维变更时，可以隔离 Zone。隔离后，新的读写请求不会路由到该 Zone 内的节点上，从而可以隔离故障或者安全的执行运维动作。
+
+* 故障隔离场景：例如多机房部署架构下，某机房内有交换机异常，此时部分节点出现丢包、重传，甚至无主选举。为了快速恢复，可以直接隔离该机房对应的 Zone。
+
+* 运维变更场景：例如 OceanBase 集群升级时采用的轮转升级方案，首先隔离一个 Zone，将用户流量从该 Zone 切到其他 Zone ，然后执行升级动作。该 Zone 升级完成后执行 Start 操作恢复流量，再依次升级其他 Zone，从而做到升级对用户透明。
+
+隔离 Zone，只是将用户流量从该 Zone 切走，并没有改变 Paxos 投票成员的数量，如果是故障隔离场景，依然存在风险敞口，此时再发生一台机器故障，可能会破坏多数派节点并引起租户无主，适用于短时间隔离的场景，并且需要保持关注，提前做好二次故障的应急预案。如果短时间内恢复不了，可以采用替换 Zone 的方式彻底去除隐患。
 
 ## 背景信息
 
@@ -13,6 +21,7 @@
 * 通过 `ISOLATE ZONE` 命令隔离 Zone
 
 通过以上命令隔离 Zone 成功后， Zone 的 `STATUS` 的值变为 `INACTIVE`，表示该 Zone 处于 `INACTIVE` 状态。
+
 
 对于 `STOP ZONE` 命令，假设被执行 `STOP ZONE` 命令的节点为 zone1，`STOP ZONE` 命令的内部执行逻辑如下：
 
@@ -28,16 +37,22 @@
 
    由于该步骤需要等待 Leader 全部切走，如果该 Zone 内节点上的副本数较多，`STOP ZONE` 命令可能会执行超时，超时后可以重新执行 `STOP ZONE` 命令，直到成功为止。
 
+
 由于 `STOP ZONE` 命令的前置检查较多，生产环境存在检查不通过而无法隔离的情况。`FORCE STOP ZONE` 命令和 `ISOLATE ZONE` 命令是 `STOP ZONE` 命令的弱化版本，其差异主要在：
 
 * `FORCE STOP ZONE` 命令的内部执行逻辑，跳过了 `STOP ZONE` 命令逻辑的第 4 步。
 
-* `ISOLATE ZONE` 的逻辑，跳过了 `STOP ZONE` 命令逻辑的 2 ~ 4 步，并且仅将问题 Zone 内的节点状态在 RS 端标记为 stopped，不再等待 Leader 全部切走，然后给客户端返回成功。
+* `ISOLATE ZONE` 的逻辑，跳过了 `STOP ZONE` 命令逻辑的 2 ~ 4 步，并且仅将问题 Zone 内的节点状态在 RootService 标记为 stopped，不再等待 Leader 全部切走，然后给客户端返回成功。
+
+
+由于三种隔离命令的前置检查逻辑不同，存在强弱关系：`STOP ZONE` > `FORCE STOP ZONE` > `ISOLATE ZONE`，使用时应该尽量使用强化版本。
+
+* 对于运维变更场景，必须使用 `STOP ZONE` 命令，如果前置检查不通过导致执行失败，需要确认原因并修复后重新执行。
+
+* 对于故障隔离场景，快速止血是第一要务，应该尽量使用强化版本的隔离命令，如果执行不成功，可以尝试弱化版本的隔离命令，直到成功为止。如果隔离命令全部执行失败，并且节点上进程异常导致集群全局状态异常，例如 RootService 进程 hang 住，可以执行 kill 进程的动作。
 
 
 ## 操作步骤
-
-在对一个机房的机器进行运维操作时，可以使用如下递进方式进行处理：
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -101,7 +116,7 @@
       obclient [(none)]> ALTER SYSTEM ISOLATE ZONE 'zone1'; 
       ```
 
-      成功执行 Isolate Zone 操作后，仅将问题 Zone 内的节点状态标记为 stopped 状态，RS 会尽力将问题 Zone 内所有节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
+      成功执行 Isolate Zone 操作后，仅将问题 Zone 内的节点状态标记为 stopped 状态，RootServiceS 会尽力将问题 Zone 内所有节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
 
       * 集群中所有日志流副本完好，但问题 Zone 内的部分节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
