add somme description

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -116,7 +116,7 @@
       obclient [(none)]> ALTER SYSTEM ISOLATE ZONE 'zone1'; 
       ```
 
-      成功执行 Isolate Zone 操作后，仅将问题 Zone 内的节点状态标记为 stopped 状态，RootServiceS 会尽力将问题 Zone 内所有节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
+      成功执行 Isolate Zone 操作后，仅将问题 Zone 内的节点状态标记为 stopped 状态，RootService 会尽力将问题 Zone 内所有节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
 
       * 集群中所有日志流副本完好，但问题 Zone 内的部分节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
 
@@ -156,6 +156,14 @@
       ```shell
       [admin@xxx oceanbase]$ kill -9 103364
       ```
+
+需要强调的是：
+
+* 任何场景下都应该尽量使用 Stop Zone 命令来执行隔离操作，成功执行后可以安全的执行任何运维动作或者应急动作，甚至 kill observer 进程。
+
+* Force Stop Zone 和 Isolate Zone 是弱化版本的隔离命令，适用于故障应急场景下 Stop Zone 执行时前置检查不通过的情况，不承诺能够安全的 kill observer 进程。
+
+* 隔离 Zone 只是将用户流量从该 Zone 切走，避免用户流量受到该 Zone 内异常的影响。不会改变 Paxos 投票成员的数量，需要避免隔离期间的二次故障，做好相应应急预案。如果需要长时间隔离，需要执行替换 Zone 的操作。
 
 ## 相关文档
 
