--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -161,7 +161,7 @@
 
 * 任何场景下都应该尽量使用 Stop Zone 命令来执行隔离操作，成功执行后可以安全的执行任何运维动作或者应急动作，甚至 kill observer 进程。
 
-* Force Stop Zone 和 Isolate Zone 是弱化版本的隔离命令，适用于故障应急场景下 Stop Zone 执行时前置检查不通过的情况，不承诺能够安全的 kill observer 进程。
+* Force Stop Zone 和 Isolate Zone 是弱化版本的隔离命令。适用于故障应急场景下 Stop Zone 执行时前置检查不通过的情况，不承诺能够安全的 kill observer 进程。不适用于运维变更场景。
 
 * 隔离 Zone 只是将用户流量从该 Zone 切走，避免用户流量受到该 Zone 内异常的影响。不会改变 Paxos 投票成员的数量，需要避免隔离期间的二次故障，做好相应应急预案。如果需要长时间隔离，需要执行替换 Zone 的操作。
 
