近期反馈问题 更新

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
@@ -199,7 +199,7 @@ query_condition AND query_condition;
 
 示例：
 
-查询 `deptno` 小于等于 30 且 `sql` 大于 1000 的数据。
+查询 `deptno` 小于等于 30 且 `sal` 大于 1000 的数据。
 
 ```sql
 obclient> SELECT empname, deptno,sal FROM emp WHERE deptno <=30 AND sal>1000;
