--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/3.partition-table-design.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/3.partition-table-design.md
@@ -4,15 +4,15 @@
 
 * 关于分区表创建时的注意事项。
 
-  * 单表行数可能超过 10 亿行或者单表容量超过 2000 GB，推荐进行创建分区表。
-
-    如果预计三年后的数据量根本达不到这个级别，请不要在创建表时使用分区表。
+  * 如果数据量很大并且访问比较集中时，可以在创建表时使用分区表。
 
   * 分区表在表创建的时候需要指定，后续不支持将非分区表在线改造成分区表，也不支持分区数量、分区类型、分区键值的在线调整。
 
-  * 分区表的主键和约束注意事项。
+  * 善用 Tablegroup 技术。
 
-    * 主键默认应该只有 local 的，不能指定 local 或 global 属性。
+    如果多张表通过各自的分区键进行关联，且分区键的分区策略一致，比如都是 hash 分区，且分区数也相等，可以把多张表通过 Tablegroup 技术放到一个表组中提高关联效率。
+
+  * 分区表约束注意事项。
 
     * 建分区表时，表上的每一个主键、唯一键所对应的字段里都必须至少有一个字段包含在表的分区键字段中。
 
@@ -39,9 +39,3 @@
 * 关于分区的使用限制。
 
   hash 分区下，不适合基于分区字段进行范围查询。
-  
-<!--
-  * 善用 Tablegroup 技术。
-
-    如果多张表通过各自的分区键进行关联，且分区键的分区策略一致，比如都是 hash 分区，且分区数也相等，可以把多张表通过 tablegroup 技术放到一个表组中提高关联效率。
--->
