--- a/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/21.create-tenant.md
+++ b/zh-CN/14.developer-guide/7.sql-reference/5.sql-statements/21.create-tenant.md
@@ -54,5 +54,5 @@ opt_set_sys_var:
 * 创建租户。
 
   ```sql
-  obclient> CREATE TENANT IF NOT EXISTS t1 charset='utf8mb4', replica_num=1, zone_list=('zone1'), primary_zone='zone1', resource_pool_list=('pool1');
+  obclient> CREATE TENANT IF NOT EXISTS t1 charset='utf8mb4', replica_num=1, zone_list=('zone1'), primary_zone='zone1', resource_pool_list=('pool1') set ob_tcp_invited_nodes='%';
   ```
