400ofuse部署开发反馈低错修改

--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -62,6 +62,21 @@ BIOS 需要配置以下选项：
 >
 > 不同的服务器修改 BIOS 的方式不同，具体操作请参见服务器操作手册。
 
+### ARM 环境部署建议
+
+* BIOS 及内核参数开启 Numa 支持。
+* 执行以下命令关闭 `numa balancing`，避免 `balance` 过程中性能可能发生抖动。
+
+  ```bash
+  sysctl kernel.numa_balancing=0
+  ```
+
+* 执行以下命令将 `zone_reclaim_mode` 设置为 `0`。
+
+  ```bash
+  sysctl vm.zone_reclaim_mode=0
+  ```
+
 ## 磁盘挂载
 
 * OCP 服务器的磁盘挂载点要求如下表所示。
