--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
@@ -15,7 +15,7 @@
 
 * 字符型字段。
 
-  * 所有动态字符串建议全部使用 `VARCHAR(N)` 类型。示例：业务中 IP 地址字段推荐使用 `varchar(32)`。
+  * 所有动态字符串建议全部使用 `VARCHAR(N)` 类型。
 
   * 仅仅只有单字符的字段使用 `CHAR(1)`。表达是与否概念的字段，建议使用 `CHAR(1)` 类型以节省空间（1 代表 TRUE，0 代表 FALSE），值的内容要统一，所有应用值要统一，例如：表达逻辑删除的字段名 `is_deleted`，1 表示删除，0 表示未删除。
 
