--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/8.connect-to-the-oceanbase-database-through-spring-boot-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/8.connect-to-the-oceanbase-database-through-spring-boot-of-mysql-mode.md
@@ -51,9 +51,9 @@ JDK1.8 和 OceanBase 3.x（mysql模式/oracle模式）
         <version>12.1.0.1</version>
     </dependency>
     <dependency>
-        <groupId>com.alipay.oceanbase</groupId>
+        <groupId>com.oceanbase</groupId>
         <artifactId>oceanbase-client</artifactId>
-        <version>3.2.3</version>
+        <version>2.4.0</version>
     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
