修改登录描述

--- a/zh-CN/6.manage/1.clutser-management/1.cluster-management-overview.md
+++ b/zh-CN/6.manage/1.clutser-management/1.cluster-management-overview.md
@@ -1,6 +1,6 @@
 # 集群介绍
 
-本节主要介绍 OceanBase 集群相关的基本概念及物理架构。
+本节主要介绍 OceanBase 集群相关的基本概念及部署架构。
 
 OceanBase 数据库是一款分布式数据库，由多个物理上分散的数据库单元组成，通过计算机网络将这些数据库单元组成的逻辑上的统一整体，称之为 OceanBase 集群。
 
