--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.modify-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.modify-a-zone.md
@@ -4,7 +4,7 @@
 
 ## 操作步骤
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -54,7 +54,6 @@
    ```
 
    有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/63.oceanbase-dba_ob_zones.md)。
-
 
 ## 相关文档
 
