--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -22,7 +22,6 @@
 
 通过以上命令隔离 Zone 成功后， Zone 的 `STATUS` 的值变为 `INACTIVE`，表示该 Zone 处于 `INACTIVE` 状态。
 
-
 对于 `STOP ZONE` 命令，假设被执行 `STOP ZONE` 命令的节点为 zone1，`STOP ZONE` 命令的内部执行逻辑如下：
 
 1. 检查是否有其他 Zone 被 Stop。如果存在，则不允许对 zone1 执行 Stop Zone 操作。
@@ -37,13 +36,11 @@
 
    由于该步骤需要等待 Leader 全部切走，如果该 Zone 内节点上的副本数较多，`STOP ZONE` 命令可能会执行超时，超时后可以重新执行 `STOP ZONE` 命令，直到成功为止。
 
-
 由于 `STOP ZONE` 命令的前置检查较多，生产环境存在检查不通过而无法隔离的情况。`FORCE STOP ZONE` 命令和 `ISOLATE ZONE` 命令是 `STOP ZONE` 命令的弱化版本，其差异主要在：
 
 * `FORCE STOP ZONE` 命令的内部执行逻辑，跳过了 `STOP ZONE` 命令逻辑的第 4 步。
 
 * `ISOLATE ZONE` 的逻辑，跳过了 `STOP ZONE` 命令逻辑的 2 ~ 4 步，并且仅将问题 Zone 内的节点状态在 RootService 标记为 stopped，不再等待 Leader 全部切走，然后给客户端返回成功。
-
 
 由于三种隔离命令的前置检查逻辑不同，存在强弱关系：`STOP ZONE` > `FORCE STOP ZONE` > `ISOLATE ZONE`，使用时应该尽量使用强化版本。
 
@@ -51,17 +48,16 @@
 
 * 对于故障隔离场景，快速止血是第一要务，应该尽量使用强化版本的隔离命令，如果执行不成功，可以尝试弱化版本的隔离命令，直到成功为止。如果隔离命令全部执行失败，并且节点上进程异常导致集群全局状态异常，例如 RootService 进程 hang 住，可以执行 kill 进程的动作。
 
-
 ## 操作步骤
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
-   
+
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
 2. 对问题 Zone 执行隔离 Zone 操作。
@@ -81,7 +77,7 @@
       ```
 
       成功执行后，可以对 Zone 内的节点做任何运维操作，可以直接执行第 3 步 kill observer 进程操作，对业务流量无任何影响。
-      
+
       若无法执行成功，请尝试执行 Force Stop Zone 操作。
 
    2. 对问题 Zone 执行 Force Stop Zone 操作。
@@ -99,7 +95,7 @@
       ```
 
       成功执行后可以对 Zone 内的节点做任何运维操作，可以直接执行第 3 步 Kill observer 进程，对业务流量无任何影响。
-      
+
       若无法执行成功，尝试执行 Isolate Zone 操作。
 
    3. 对问题 Zone 执行 Isolate Zone 操作。
