--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -22,7 +22,7 @@
 
 系统租户（即 `sys` 租户）和用户租户均可以通过 SHOW 语句查看集群级配置项的值。
 
-1. 系统租户或用户租户登录到数据库。
+1. 系统租户或用户租户登录到集群。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -73,7 +73,7 @@
 
 ## 通过 GV$OB_PARAMETERS 视图查看集群配置项
 
-1. 系统租户或用户租户登录到数据库。
+1. 系统租户或用户租户登录到集群。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -136,7 +136,6 @@
    ```shell
    [admin@xxx etc]$ strings observer.config.bin
    ```
-
 
 ## 相关文档
 
