--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -141,7 +141,7 @@
       * `-r`：用于指定待添加的 OceanBase 集群的 RS 地址列表。
 
       * `-l`：用于指定日志的级别，本示例中为 `WARN`，表示日志级别为 WARNING 级别。
-        
+
         有关 OceanBase 数据库日志级别的详细介绍，请参见 [日志打印级别](../../../7.reference/2.administrator-guide/2.basic-database-management/8.manage-logs/2.log-print-level/1.log-print-level-1.md)。
 
       * `-o`：用于指定集群的启动配置项。使用 `-o` 参数时，需满足以下条件：
@@ -166,7 +166,7 @@
 
 7. 向集群中添加节点。
 
-   1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+   1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
       连接示例如下，连接数据库时请以实际环境为准。
 
@@ -175,7 +175,6 @@
       ```
 
      有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
-
 
    2. 执行以下命令，向集群的 Zone 中添加节点。
 
