--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -38,14 +38,14 @@
 
 在对节点进行异常隔离或者运维操作时，可以使用如下递进方式进行处理：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
    ```shell
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
-   
+
    有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
 
 2. 对问题节点执行隔离节点操作。
