--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
@@ -2,10 +2,9 @@
 
 OceanBase 集群由若干个 Zone 组成。从物理层面来讲，一个Zone通常是一个独立的物理部署单元，可以是一个数据中心（IDC）或者云上的一个AZ（可用区），也可以是一个单独的机架（Rack）。通过将 OceanBase 集群部署于不同的 Zone ，实现单个 Zone 故障时的故障隔离及快速恢复。
 
-
 ## 操作步骤
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
