--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -13,7 +13,7 @@
 
 本文以重启集群中的一个节点为例提供操作指导，如果需要重启多个节点，请参考本操作执行多次即可。
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
