--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -11,10 +11,9 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
             <p>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 <code>oceanbase.GV$OB_SERVERS</code>视图判断 Zone 内各 OBServer 的资源使用情况。 </p>
           </main>
 
-
 ## 操作步骤
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
@@ -134,7 +133,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
 Cancel Delete Server 的具体操作如下：
 
-1. 使用 `root` 用户登录到数据库的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    连接示例如下，连接数据库时请以实际环境为准。
 
