--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -8,7 +8,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
 <main id="notice" type='notice'>
             <h4>注意</h4>
-            <p>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 <code>oceanbase.GV$OB_SERVERS</code>视图判断 Zone 内各 OBServer 的资源使用情况。 </p>
+            <p>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 <code>oceanbase.GV$OB_SERVERS</code> 视图判断 Zone 内各 OBServer 服务器的资源使用情况。 </p>
           </main>
 
 ## 操作步骤
@@ -28,7 +28,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    <main id="notice" type='explain'>
             <h4>说明</h4>
             <p>建议您手动迁移待删除的节点上的 Unit 后再执行 Delete Server 操作。</p>
-          </main>
+   </main>
 
    1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
 
@@ -56,13 +56,13 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
       ```
 
       其中：
-      
+
       * `UNIT_ID`：表示节点上各 Unit 的 ID。
 
       * `TENANT_ID`：表示该 Unit 所属的租户 ID。如果值为 `NULL`，表示当前 Unit 不属于任何租户。
 
       * `STATUS`：表示该 Unit 当前的状态：
-      
+
         * `ACTIVE`：正常状态
 
         * `DELETING`：正在删除状态
@@ -71,8 +71,8 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
       * `SVR_IP`：表示该 Unit 所属的节点 IP。
 
-      有关 oceanbase.DBA_OB_UNITS 视图的更多说明，请参见 [oceanbase.DBA_OB_UNITS ](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/61.oceanbase-dba_ob_units.md)。
-     
+      有关 `oceanbase.DBA_OB_UNITS` 视图的更多说明，请参见 [oceanbase.DBA_OB_UNITS](../../../7.reference/5.system-reference/4.system-view-for-mysql/2.dictionary-view-5/61.oceanbase-dba_ob_units.md)。
+
    2. 根据查询结果，执行以下命令，手动迁移 Unit。
 
       语句如下：
@@ -179,13 +179,12 @@ Cancel Delete Server 的具体操作如下：
 
 * [重启节点](3.restart-a-node.md)
 
-* [添加节点](2.add-a-node.md)
+* [添加节点](4.add-a-node.md)
 
-* [隔离节点](4.isolation-a-node.md)
+* [隔离节点](6.isolation-a-node.md)
 
 * [替换节点](7.replace-a-node.md）
 
 * [删除 Zone](9.delete-a-zone.md)
 
 * [副本迁移](链接暂时无法加)
-
