--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-删除 Zone 前，请确认该 Zone 下已不存在 OBServer，并且该 Zone 的状态为 `INACTIVE`，否则将会导致删除 Zone 失败。查看 Zone 状态的相关操作可参见 [查看 Zone](1.view-a-zone.md)；查看 Zone 内的 OBServer 的相关操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
+删除 Zone 前，请确认该 Zone 下已不存在节点，并且该 Zone 的状态为 `INACTIVE`，否则将会导致删除 Zone 失败。查看 Zone 状态的相关操作可参见 [查看 Zone](1.view-a-zone.md)；查看 Zone 内节点的相关操作可参见 [查看节点](2.view-an-observer.md)。
 
 ## 操作步骤
 
