--- a/zh-CN/4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md
@@ -105,7 +105,7 @@ metadata:
   namespace: obcluster
 spec:
   imageRepo: oceanbasedev/oceanbase-cn
-  tag: v4.0.0-10100042022051821
+  tag: 4.0.0-snapshot-20230130110559
   clusterID: 1
   topology:
     - cluster: cn
