--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/1.view-a-zone.md
@@ -35,9 +35,9 @@ OceanBase 集群由若干个 Zone 组成。从物理层面来讲，一个Zone通
 
    * `STATUS`: Zone 状态。
 
-     * `ACTIVE` 表示该 Zone 为可用状态。
+     * `ACTIVE` ：表示该 Zone 为可用状态。
 
-     * `INACTIVE` 表示该 Zone 为不可用状态。当一个 Zone 里面所有节点不可用时，该 Zone 被置为 `INACTIVE`，通常发生于物理机房故障、网络分区等情况下。
+     * `INACTIVE` ：表示该 Zone 为不可用状态。当一个 Zone 里面所有节点不可用时，该 Zone 被置为 `INACTIVE`，通常发生于物理机房故障、网络分区等情况下。
 
    * `IDC`：Zone 所在的机房名。
 
@@ -51,10 +51,10 @@ OceanBase 集群由若干个 Zone 组成。从物理层面来讲，一个Zone通
 
 更多 Zone 相关的运维操作，请参见以下信息：
 
-* [添加 Zone](7.add-a-zone.md)
+* [添加 Zone](8.add-a-zone.md)
 
-* [删除 Zone](8.delete-a-zone.md)
+* [删除 Zone](9.delete-a-zone.md)
 
-* [修改 Zone](9.modify-a-zone.md)
+* [修改 Zone](10.modify-a-zone.md)
 
-* [隔离 Zone](10.isolation-a-zone.md)
+* [隔离 Zone](11.isolation-a-zone.md)
