--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -1,11 +1,19 @@
 # 重启节点
 
-重启是常用运维动作之一，重启节点可以解决 observer 进程的一部分问题，或者对机器进行短暂维修（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会被永久下线）。如果长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
+重启是常用运维动作之一。
 
-<main id="notice" type='explain'>
+重启节点可以解决以下问题：
+
+* 解决 observer 进程的一部分问题
+
+* 对机器进行短暂维修
+
+  对机器进行短暂维修时，节点下线时间需要在 `server_permanent_offline_time` 以内，否则会导致节点被永久下线。如果长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
+
+  <main id="notice" type='explain'>
             <h4>说明</h4>
             <p>集群级配置项 <code>server_permanent_offline_time</code> 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。默认为 3600s。有关该配置项的更多详细信息，请参见 <a href="../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md">server_permanent_offline_time</a>。</p>
-          </main>
+  </main>
 
 ## 操作步骤
 
@@ -43,7 +51,7 @@
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中该 Server 的 `STATUS` 字段，可以看到字段值仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为停止服务的时间点。
 
-   查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
+   查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](2.view-an-observer.md)。
 
 3. 执行以下命令，对待重启的节点进行转储操作，以便缩短重启后回放 Redolog 的时间，加速重启。
 
@@ -138,7 +146,7 @@
 
    执行成功后，可以查询 `oceanbase.DBA_OB_SERVERS` 视图中的 `START_SERVICE_TIME` 字段，该字段表示节点启动服务的时间。如果该值为 `NULL`，则表示该节点的服务还没有启动。
 
-   查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](../2.view-the-cluster-composition/2.view-an-observer.md)。
+   查询 `oceanbase.DBA_OB_SERVERS` 视图的具体操作可参见 [查看节点](2.view-an-observer.md)。
 
 ## 相关文档
 
