--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -4,9 +4,9 @@
 
 ## 前提条件
 
-* 请确认待增加的所有 OBServer 服务器已完成相关配置，具体操作可参见 [服务器配置](../../../4.deploy/3.preparations-before-deployment-1/2.server-configuration.md) 章节和 [部署环境配置](../../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md)章节。
+* 请确认待增加的所有 OBServer 服务器已完成相关配置，具体操作可参见 [服务器配置](../../../4.deploy/3.preparations-before-deployment-1/2.server-configuration.md) 章节和 [部署环境配置](../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md) 章节。
 
-* 增加节点前需要为所有 OBServer 服务器安装数据库软件，您可以从 OceanBase 官网的下载中心下载对应版本的 OceanBase 数据库软件安装包安装包，或者从 OceanBase 技术支持人员处获取。
+* 增加节点前需要为所有 OBServer 服务器安装数据库软件，您可以从 OceanBase 官网的下载中心下载对应版本的 OceanBase 数据库软件安装包，或者从 OceanBase 技术支持人员处获取。
 
 ## 操作步骤
 
@@ -14,7 +14,7 @@
 
 2. 通过 `ssh` 登录到待添加的 OBServer 服务器，进行安装前检查。
 
-   1. 使用 `root` 用户依次登录到待增加 OBServer 服务器。
+   1. 使用 `root` 用户依次登录到待添加的 OBServer 服务器。
 
    2. 执行以下命令，开始检查。
 
@@ -25,6 +25,11 @@
       ```
 
    3. 执行以下命令，检查时钟同步情况，保证所有节点的时钟偏差在 100 ms 以内。
+
+      <main id="notice" type='explain'>
+      <h4>说明</h4>
+      <p>物理机与时钟服务器的误差在 50 ms 以下可认为时钟是同步状态，OceanBase 集群最大容忍误差不能超过 100 ms。当时钟偏差超过 100 ms 时，会出现无主的情况。配置时钟同步的相关操作请参见 <a href="../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/3.configure-clock-source.md">配置时钟源</a>。</p>
+      </main>
 
       ```shell
       [root@xxx clonescripts]#  ntpdate $IP
