--- a/zh-CN/7.reference/2.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
+++ b/zh-CN/7.reference/2.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
@@ -19,7 +19,7 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num;
 |  **参数**   |   **描述**   |
 |-----------|------------|
 | tenant_name | 修改配置的租户名称。 |
-| UNIT_NUM [=] unitnum |修改单个 Zone 下的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 个数。 |
+| UNIT_NUM [=] unitnum |修改租户下所有资源池的 unit 个数。取值要小于等于对应 Zone 中的 OBServer 个数。 |
 
 示例
 -----------------------
