修改 3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md

--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/3.use-canal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -16,9 +16,7 @@ ob_cluster -> oblogreader -> oblogmsg -> canal_server -> canal_client -> mysql
 
 组件介绍：
 
-* libobcdc 是 OceanBase CDC 的基本组件，libobcdc 衍生出 oblogproxy，libobcdc 依赖 oblogmsg。
-
-* libobcdc 是 C++ 动态库，将从 OceanBase 集群中拉到的增量日志按事务提交顺序向外透出，透出的方式是按 LogMessage 协议创建相关对象给使用方使用。
+* libobcdc 是 OceanBase CDC 的基本组件，libobcdc 衍生出 oblogproxy，libobcdc 依赖 oblogmsg。libobcdc 是 C++ 动态库，将从 OceanBase 集群中拉到的增量日志按事务提交顺序向外透出，透出的方式是按 LogMessage 协议创建相关对象给使用方使用。
 
 * ObLogReader 对 libobcdc 的 C++ 封装，在 libobcdc 的基础上，对创建出的 LogMessage 对象适配多种序列化输出。
 
